--- a/index.html
+++ b/index.html
@@ -145,10 +145,27 @@
          <h1>One Piece</h1>
          <div class="raiting">
          <p class="age">+13</p>
-         <p><i class="fa-brands fa-imdb episode"></i><p>+9</p></p>
+         <p class="epi"><i class="fa-brands fa-imdb episode"></i><i class="fa-solid fa-star" style="font-size: 16; color: red;"></i><i class="fa-solid fa-star" style="font-size: 16; color: red;"></i><i class="fa-solid fa-star" style="font-size: 16; color: red;"></i><i class="fa-solid fa-star" style="font-size: 16; color: red;"></i><i class="fa-solid fa-star" style="font-size: 16; color: red;"></i></p>
          <p class="time">23 min</p>
          </div>
-         <p>ONE PIECE is a legendary high-seas quest unlike any other. Luffy is a young adventurer who has longed for a life of freedom ever since he can remember. He sets off from his small village on a perilous journey to find the legendary fabled treasure, ONE PIECE, to become King of the Pirates!</p>
+         <div>
+            <p class="pool" style="font-size: 1.9rem;">ONE PIECE is a legendary high-seas quest unlike any other. Luffy is a young adventurer who has longed for a life of freedom ever since he can remember. He sets off from his small village on a perilous journey to find the legendary fabled treasure, ONE PIECE, to become King of the Pirates!</p>
+            <!-- MORE İNFO -->
+            <div class="about change">
+               <a class="bg_links social portfolio" href="https://www.rafaelalucas.com" target="_blank">
+               <span class="icon"></span>
+               </a>
+               <a class="bg_links social dribbble" href="https://dribbble.com/rafaelalucas" target="_blank">
+               <span class="icon"></span>
+               </a>
+               <a class="bg_links social linkedin" href="https://www.linkedin.com/in/rafaelalucas/" target="_blank">
+               <span class="icon"></span>
+               </a>
+               <a class="bg_links logo"></a>
+           </div>
+           <button class="butn change"><span>More İnfo</span></button>
+           <!-- MORE İNFO -->
+         </div>
          <div>
             <button class="ply-btn"><i class="fa-regular fa-circle-play"></i> Play Now</button>
             <button class="ply-btn"><i class="fa-solid fa-clapperboard"></i> Series Page</button>
